# tmp-test-project

./: README.md  folder.ipynb  main.py  pyproject.toml  try.ipynb  try.py
pages/: natal-swe.py
