[tool.poetry]
name = "swe"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
ipykernel = "^6.29.5"
pyswisseph = "^2.10.3.2"
platformdirs = "^4.3.6"
requests = "^2.32.3"
streamlit = "^1.41.1"
natal = "^0.8.12"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
